--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.344.0",
     "luxon": "^3.4.4",
     "next": "14.1.2",
+    "next-auth": "^4.24.6",
     "normalize.css": "^8.0.1",
     "react": "^18",
     "react-datepicker": "^6.2.0",
