--- a/package.json
+++ b/package.json
@@ -11,16 +11,20 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@lucia-auth/adapter-prisma": "^4.0.1",
+    "@prisma/client": "5.10.2",
     "@tanstack/react-table": "^8.13.2",
+    "arctic": "^1.2.1",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "focus-trap-react": "^10.2.3",
+    "lucia": "^3.1.1",
     "lucide-react": "^0.344.0",
     "luxon": "^3.4.4",
     "next": "14.1.2",
-    "next-auth": "^4.24.6",
     "normalize.css": "^8.0.1",
+    "oslo": "^1.1.3",
     "react": "^18",
     "react-datepicker": "^6.2.0",
     "react-dom": "^18",
