--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@hookform/resolvers": "^3.3.4",
     "@lucia-auth/adapter-prisma": "^4.0.1",
     "@prisma/client": "5.10.2",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-separator": "^1.0.3",
     "@tanstack/react-table": "^8.13.2",
     "arctic": "^1.2.1",
     "axios": "^1.6.7",
@@ -29,8 +31,10 @@
     "react-datepicker": "^6.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
+    "react-responsive": "^9.0.2",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.9.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
