--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@lucia-auth/adapter-prisma": "^4.0.1",
     "@prisma/client": "5.10.2",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@tanstack/react-table": "^8.13.2",
     "arctic": "^1.2.1",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
     "focus-trap-react": "^10.2.3",
     "lucia": "^3.1.1",
     "lucide-react": "^0.344.0",
@@ -30,6 +33,7 @@
     "oslo": "^1.1.3",
     "react": "^18",
     "react-datepicker": "^6.2.0",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
     "react-responsive": "^9.0.2",
