--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-template",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -18,6 +18,7 @@
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-table": "^8.13.2",
     "arctic": "^1.2.1",
     "axios": "^1.6.7",
@@ -29,7 +30,6 @@
     "lucide-react": "^0.344.0",
     "luxon": "^3.4.4",
     "next": "14.1.2",
-    "normalize.css": "^8.0.1",
     "oslo": "^1.1.3",
     "react": "^18",
     "react-datepicker": "^6.2.0",
