--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,16 +5,12 @@
 
 version: 2
 updates:
-  - package-ecosystem: "npm" # See documentation for possible values
-    directory: "/" # Location of package manifests
+  - package-ecosystem: 'npm' # See documentation for possible values
+    directory: '/' # Location of package manifests
     schedule:
-      interval: "monthly"
+      interval: 'monthly'
     allow:
       # Allow both direct and indirect updates for all packages
-      - dependency-type: "all"
+      - dependency-type: 'direct'
     commit-message:
-      # Prefix all commit messages with "npm: "
-      prefix: "npm"
-    labels:
-      - "npm"
-      - "dependencies"
+      prefix: 'chore(dependencies)'
